infra/k8s/kafka/kafka-server1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-server1
  name: kafka-server1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-server1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/kafka-net: "true"
        io.kompose.service: kafka-server1
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: PLAINTEXT://localhost:9092
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: zookeeper-server:2181
          image: bitnami/kafka:latest
          name: kafka-server1
          ports:
            - containerPort: 9092
          resources: {}
      restartPolicy: Always
status: {}
