infra/k8s/kafka/zookeeper-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper-server
  name: zookeeper-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/kafka-net: "true"
        io.kompose.service: zookeeper-server
    spec:
      containers:
        - env:
            - name: ALLOW_ANONYMOUS_LOGIN
              value: "yes"
          image: bitnami/zookeeper:latest
          name: zookeeper-server
          ports:
            - containerPort: 2181
          resources: {}
      restartPolicy: Always
status: {}
