infra/k8s/kafka/kafka-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kafka-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kafka-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kafka-net: "true"
